<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Tree_IndexBased_Node" Id="{1417b5c2-968d-4bda-be5d-06c20e448675}">
    <Declaration><![CDATA[TYPE ST_Tree_IndexBased_Node :
STRUCT
	sName 		: STRING;
	nChildCount	: DINT;
	nParent		: DINT;
	a_nChildren	: ARRAY[0..15] OF DINT;
	nDepth		: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>