<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_Tree_IndexBased" Id="{329a32fd-f238-4137-9397-ea1d78854c9d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Tree_IndexBased IMPLEMENTS ITF_Tree_IndexBased
VAR_IN_OUT
	a_stNodes : ARRAY[0..63] OF ST_Tree_IndexBased_Node;
END_VAR
VAR_INPUT
	sHead : STRING;
END_VAR
VAR
	bInitialized 	: BOOL;
	nNodeCount 		: DINT;
	nNewNodeIndex	: DINT;
	nHeadIndex		: DINT;
	
	//"Temp" variables for use in AddNodeAsChildByName
	nParentIndex 	: DINT;
	nChildCount		: DINT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bInitialized THEN
	initialize();
END_IF]]></ST>
    </Implementation>
    <Folder Name="01_ITF_Tree_IndexBased" Id="{a3bc00ea-a8f6-421c-938a-2a78cd275621}" />
    <Method Name="AddNodeAsChildByName" Id="{cf8f65b6-5cf8-45a5-99be-5fee703fb657}" FolderPath="01_ITF_Tree_IndexBased\">
      <Declaration><![CDATA[METHOD AddNodeAsChildByName : BOOL
VAR_INPUT
	sNewName 	: STRING;
	sParentName	: STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[nParentIndex := GetIndexByName(sParentName);		//Find the index value of the designated parent node
nChildCount := a_stNodes[nParentIndex].nChildCount;
IF nParentIndex >= 0 THEN	//If GetIndex was successful
	IF (a_stNodes[nParentIndex].nChildCount < 64) THEN	//TODO: Proper Constant bound definition	//If the parent is not at max child count
		a_stNodes[nNewNodeIndex].sName := sNewName;		//assign new node name to next empty node in list
		a_stNodes[nNewNodeIndex].nParent := nParentIndex;	//assign the parent node to the new child node
		a_stNodes[nNewNodeIndex].nDepth := a_stNodes[nParentIndex].nDepth + 1;
		a_stNodes[nParentIndex].a_nChildren[nChildCount] := nNewNodeIndex;		//assign the new node location as the next child in the parent
		nNewNodeIndex := nNewNodeIndex + 1;		//Increment to next empty node
		a_stNodes[nParentIndex].nChildCount := nChildCount + 1;
	END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetIndexByName" Id="{be420560-9e63-430e-939f-9883ff395b2f}">
      <Declaration><![CDATA[METHOD GetIndexByName : DINT
VAR_INPUT
	sName : STRING;
END_VAR
VAR
	i : DINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 0 TO nNodeCount DO
	IF a_stNodes[i].sName = sName THEN
		GetIndexByName := i;
		RETURN;
	END_IF
END_FOR

GetIndexByName := -1;]]></ST>
      </Implementation>
    </Method>
    <Method Name="initialize" Id="{1c1868c4-1b6a-4140-b4e0-9a7a111582f2}">
      <Declaration><![CDATA[METHOD PRIVATE initialize : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//nNodeCount := UPPER_BOUND(a_stNodes,1) - LOWER_BOUND(a_stNodes,1) + 1;
nNodeCount := 64;
IF nNodeCount >= 0 THEN
	nHeadIndex := 0;//LOWER_BOUND(a_stNodes,1);
	a_stNodes[nHeadIndex].sName := sHead;
	a_stNodes[nHeadIndex].nDepth := 0;
	a_stNodes[nHeadIndex].nParent := -1;
	nNewNodeIndex := nHeadIndex + 1;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Tree_IndexBased">
      <LineId Id="9" Count="0" />
      <LineId Id="18" Count="1" />
    </LineIds>
    <LineIds Name="FB_Tree_IndexBased.AddNodeAsChildByName">
      <LineId Id="5" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="FB_Tree_IndexBased.GetIndexByName">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_Tree_IndexBased.initialize">
      <LineId Id="5" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="8" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>